<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_gradient_background"
    tools:context=".FragmentCreateThread">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header_messages"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center"
        android:background="#F5F5F5"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/button_close_thread"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/icon_close"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center|left"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.093"
            app:layout_constraintStart_toEndOf="@+id/button_close_thread"
            tools:layout_editor_absoluteY="15dp">

            <TextView
                android:id="@+id/header_create_thread"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:textColor="@color/darkgrey"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/header_create_thread"
                android:textColor="@color/darkgrey"
                android:textSize="16dp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/thread_subject"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:hint="@string/input_subject"
        app:layout_constraintTop_toBottomOf="@+id/header_messages" />

    <EditText
        android:id="@+id/thread_message"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="64dp"
        android:gravity="top|left"
        android:hint="@string/input_message"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thread_subject"
        tools:layout_editor_absoluteX="16dp" />

    <ImageButton
        android:id="@+id/button_send"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/button_round_green"
        android:src="@drawable/icon_send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>