...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="1"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:layout_width="match_parent"
...
            android:text="@string/label_identity"
            android:textAllCaps="true"
            android:textColor="@color/berry"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/editText_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="18dp"
            android:hint="@string/hint_name"
            android:inputType="text"
            android:maxLines="1"
            app:backgroundTint="@color/berry"/>

        <EditText
            android:id="@+id/editText_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:layout_marginTop="10dp"
            android:hint="@string/hint_email_address"
            android:inputType="textEmailAddress"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/scrollView2"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2">

        <Button
            android:id="@+id/button_subscribe"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_margin="40dp"
            android:textSize="16dp"
            android:text="@string/button_next"
...
