<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_gradient_background"
    tools:context=".FragmentShowMessages">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header_messages"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center"
        android:background="#F5F5F5"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/button_back"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/icon_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|left"
            android:layout_marginLeft="75dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/header_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:textColor="@color/darkgrey"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/header_message"
                android:textColor="@color/darkgrey"
                android:textSize="16dp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ExpandableListView
        android:id="@+id/expandableView_show_messages"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:groupIndicator="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_messages" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_create_thread"
        android:layout_width="45dp"
        android:layout_height="45dp"
        app:fabCustomSize="45dp"
        android:src="@drawable/icon_add"
        app:backgroundTint="@color/berry"
        app:tint="@color/white"
        app:borderWidth="0dp"
        android:layout_marginBottom="25dp"
        android:layout_marginRight="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>